--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="link">
-      <a href="./unit-1" id="unit1">Unit 1</a>
+      <a href="./unit-1" id="unit1" target="_blank">Unit 1</a>
     </div>
   </body>
 </html>
