--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -157,8 +157,8 @@
         <img id="die" src="./images/die.1.png" class="transparent">
 
         <!-- Answer Feedback -->
-        <a id="correct" class="feedback disNon">Correct!</a>
-        <a id="incorrect" class="feedback disNon">Incorrect!</a>
+        <a id="correct" class="feedback disNon">Correcte!</a>
+        <a id="incorrect" class="feedback disNon">Incorrecte!</a>
         <a id="another" class="feedback disNon">Une Autre!</a>
         <a id="fin" class="feedback disNon">FIN!</a>
 
