--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -147,7 +147,7 @@
             <img class="transparent" alt="image" src="./images/questions/diploma.jpeg">
             <div class="transparent">
                 <button onclick="eval(10,1)">On aurait un très bonne travail.</button><br>
-                <button onclick="eval(10,2)">On aurait un travail qui te donnerait pas beaucoup d'argent.</button><br>
+                <button onclick="eval(10,2)">On aurait un travail qui te ne donnerait pas beaucoup d'argent.</button><br>
                 <button onclick="eval(10,3)">On ne pouvrait pas aller à l'Université.</button>
             </div>
         </div>
