--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -151,6 +151,15 @@
                 <button onclick="eval(10,3)">On ne pouvrait pas aller à l'Université.</button>
             </div>
         </div>
+        <div id="ques11" class="disNon question">
+            <a class="sentence transparent">Comment affecte le sport les écoles à Churchill pendant la 7<span class="super transparent">ème</span> et 8<span class="super transparent">ème<span class="super transparent"></span>?</a>
+            <img class="transparent" alt="image" src="./images/questions/soccer.png" id="soccer">
+            <div class="transparent">
+                <button onclick="eval(11,1)">On ne fait pas le sport.</button><br>
+                <button onclick="eval(11,2)">Les élèves peuvent choisir si ils veulent faire le sport.</button><br>
+                <button onclick="eval(11,3)">Le sport sont obligatoire.</button>
+            </div>
+        </div>
 
 		<!--UI-->
         <button onclick="roll()" id="rollBtn">Rouler</button>
