--- a/unit-1/index.html
+++ b/unit-1/index.html
@@ -152,12 +152,31 @@
             </div>
         </div>
         <div id="ques11" class="disNon question">
-            <a class="sentence transparent">Comment affecte le sport les écoles à Churchill pendant la 7<span class="super transparent">ème</span> et 8<span class="super transparent">ème<span class="super transparent"></span>?</a>
+            <a class="sentence transparent">Comment affecte le sport les écoles à Churchill pendant la 7<span class="super transparent">ème</span> et 8<span class="super transparent">ème</span class="super transparent">?</a>
             <img class="transparent" alt="image" src="./images/questions/soccer.png" id="soccer">
             <div class="transparent">
                 <button onclick="eval(11,1)">On ne fait pas le sport.</button><br>
                 <button onclick="eval(11,2)">Les élèves peuvent choisir si ils veulent faire le sport.</button><br>
                 <button onclick="eval(11,3)">Le sport sont obligatoire.</button>
+            </div>
+        </div>
+        <div id="ques12" class="disNon question">
+            <a class="sentence transparent">D'où vien l'argent pour les écoles de Granite School District?</a>
+            <img class="transparent" alt="image" src="./images/questions/school.jpeg">
+            <div class="transparent">
+                <button onclick="eval(12,1)">Les écoles n'ont pas d'argent.</button><br>
+                <button onclick="eval(12,2)">Le governement donne l'argent au District.</button><br>
+                <button onclick="eval(12,3)">Les élèves payent pour tous.</button>
+            </div>
+        </div>
+        <div id="ques13" class="disNon question">
+            <a class="sentence transparent">Comment peuvent les parents et les élèves changer les choses en Granite School District?</a>
+            <img class="transparent" alt="image" src="./images/questions/school.jpeg">
+            <div class="transparent">
+                <button onclick="eval(13,1)">Ils peuvent dire si ils veulent faire l'école ou pas.</button><br>
+                <button onclick="eval(13,2)">Ils peuvent voter à quelle âge l'école commence.</button><br>
+                <button onclick="eval(13,3)">Ils peuvent voter pour la durée des recrées.</button><br>
+                <button onclick="eval(13,4)">Ils peuvent voter pour si on a les vacances d'été plus longues, ou plus de vacances pendant l'école.</button>
             </div>
         </div>
 
@@ -171,6 +190,6 @@
         <a id="another" class="feedback disNon">Une Autre!</a>
         <a id="fin" class="feedback disNon">FIN!</a>
 
-        <button id="dataBtn" onclick="alert(quesDone)">Infos</button>
+        <button id="dataBtn" onclick="alert(quesDone); alert(quesSeen);">Infos</button>
     </body>
 </html>
